Agregué pagina para el formulario de nuevo expediente

--- a/Views/Home/Nuevo.cshtml
+++ b/Views/Home/Nuevo.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
-@model SanJoseEstudiantes.Views.Home.NuevoModel
+@model SanJoseEstudiantes.Models.ViewModels.NuevoViewModel
 @{
+    ViewBag.Title = "Nuevo Expediente";
 }
